fixed some z-index issues added background ing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 body{
+	background: url('/img/triangular.png');
 }
 .inline {
 	display:inline-block;
@@ -59,10 +60,22 @@ body{
 	-o-transition: all 1s ease;
 	transition: all 1s ease;
 }
+#input{
+	box-shadow: inset 1px 1px 2px #444;
+	-webkit-box-shadow: inset 1px 1px 2px #444;
+}
+#send_button {
+	box-shadow: 2px 2px 5px #444;
+	-webkit-box-shadow: 2px 2px 5px #444;
+}
+#send_button:hover {
+	box-shadow: none;
+	-webkit-box-shadow: none;
+}
 .input-fields {
 	position:relative;
-	z-index: -20;
 	top: -100px;
+	z-index: -9000;
 	-webkit-transition: all 1s ease;
 	-moz-transition: all 1s ease;
 	-o-transition: all 1s ease;
